# meilisearch-example

./: Cargo.toml
src/: main.rs
