[package]
name = "meilisearch-example"
version = "0.1.0"
edition = "2021"

[dependencies]
meilisearch-sdk = "0.27.1"
# futures: because we want to block on futures
futures = "0.3"
# serde: required if you are going to use documents
serde = { version="1.0",   features = ["derive"] }
tokio = { version = "1", features = ["full"] }

